16445
Trying to define a method named ... doesn't work in Eclipse or the console.

{noformat}
scala>   def ... = "hi"
<console>:1: error: illegal character
         def ... = "hi"
             ^
{noformat}

this works:
{noformat}
scala> def `...` = "hi"
$u2026: java.lang.String
{noformat}

I'm using Windows 7, Java 1.6_22. 
